--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
+                http_proxy: '${http_proxy}' 
+                https_proxy: '${http_proxy}' 
         image: sail-8.0/app
         ports:
             - '${APP_PORT:-80}:80'
